# gl-pal

./: .gitignore  README.md  gl-pal.cabal  gl-pal2.cabal  stack.yaml
src/Data/Colour/: Extra.hs
src/Graphics/GL/: Pal.hs  Pal2.hs
src/Graphics/GL/Pal/: ArrayBuffer.hs  AssignAttribute.hs  Debug.hs  Entity.hs  Framebuffer.hs  Geometry.hs  InferUniforms.hs  Reshader.hs  Shader.hs  Shape.hs  Texture.hs  Types.hs  Uniforms.hs  Utility.hs  WithActions.hs
src/Graphics/GL/Pal/Experimental/: StreamingArrayBuffer.hs
src/Graphics/GL/Pal/Geometries/: Cube.hs  Grid.hs  Icosahedron.hs  Line.hs  Octahedron.hs  Plane.hs  Shared.hs  SubdividedGeometry.hs  Tetrahedron.hs  Triangle.hs
src/Graphics/GL/Pal2/: ArrayBuffer.hs  AssignAttribute.hs  Entity.hs  Geometry.hs  Shader.hs  Texture.hs  Types.hs  Uniforms.hs  WithActions.hs
src/Graphics/GL/Pal2/Geometries/: Cube.hs  Plane.hs
src/Linear/: Extra.hs
test/: TestGeo.hs  TestInstanced.hs  TestInstancedM44.hs  TestInstancedM44Mapped.hs  TestRayOBB.hs  TestReshader.hs  TestUniformBuffer.hs  geo.frag  geo.vert  geoInstanced.vert  geoInstancedM44.vert  geoInstancedUniformBuffer.frag  geoInstancedUniformBuffer.vert
