name:                gl-pal
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/lukexi/gl-pal
license:             BSD3
license-file:        LICENSE
author:              Luke Iannini
maintainer:          lukexi@me.com
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-prof-options:    -Wall -O2 -fprof-auto
  ghc-options:         -Wall -O2
  exposed-modules:
    Graphics.GL.Pal
    Graphics.GL.Pal.ArrayBuffer
    Graphics.GL.Pal.AssignAttribute
    Graphics.GL.Pal.Shape
    Graphics.GL.Pal.Geometries.Cube
    Graphics.GL.Pal.Geometries.Plane
    Graphics.GL.Pal.Geometry
    Graphics.GL.Pal.InferUniforms
    Graphics.GL.Pal.Shader
    Graphics.GL.Pal.Texture
    Graphics.GL.Pal.Types
    Graphics.GL.Pal.Uniforms
    Graphics.GL.Pal.WithActions
    Data.Colour.Extra
  build-depends:       
      base >= 4.7 && < 5
    , gl
    , JuicyPixels
    , vector
    , text
    , bytestring
    , mtl
    , lens
    , linear
    , linear-extra
    , colour
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , gl-pal
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lukexi/gl-pal
