name:                gl-pal
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/lukexi/gl-pal
license:             BSD3
license-file:        LICENSE
author:              Luke Iannini
maintainer:          lukexi@me.com
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-prof-options:    -Wall -O2 -fprof-auto
  ghc-options:         -Wall -O2
  exposed-modules:
    Graphics.GL.Pal
    Graphics.GL.Pal.ArrayBuffer
    Graphics.GL.Pal.AssignAttribute
    Graphics.GL.Pal.Debug
    Graphics.GL.Pal.Framebuffer
    Graphics.GL.Pal.Shape
    Graphics.GL.Pal.Geometries.Shared
    Graphics.GL.Pal.Geometries.Cube
    Graphics.GL.Pal.Geometries.Plane
    Graphics.GL.Pal.Geometries.Octahedron
    Graphics.GL.Pal.Geometries.Tetrahedron
    Graphics.GL.Pal.Geometries.Line
    Graphics.GL.Pal.Geometry
    Graphics.GL.Pal.InferUniforms
    Graphics.GL.Pal.Shader
    Graphics.GL.Pal.Reshader
    Graphics.GL.Pal.Texture
    Graphics.GL.Pal.Types
    Graphics.GL.Pal.Uniforms
    Graphics.GL.Pal.WithActions
    Graphics.GL.Pal.Experimental.StreamingArrayBuffer
    Data.Colour.Extra
  build-depends:
      base
    , gl
    , JuicyPixels
    , vector
    , text
    , bytestring
    , mtl
    , lens
    , linear
    , linear-extra
    , colour
    , fsnotify
    , filepath
    , stm
    , time
    , clock
    , file-embed
    , baseline
  default-language:    Haskell2010

test-suite geo
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             TestGeo.hs
  build-depends:       base
                     , gl-pal
                     , sdl-pal
                     , linear-extra
                     , halive
                     , mtl
                     , time
                     , random
  ghc-options:         -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite instanced
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             TestInstanced.hs
  build-depends:       base
                     , gl-pal
                     , sdl-pal
                     , linear-extra
                     , halive
                     , mtl
                     , time
                     , random
  ghc-options:         -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010


test-suite instancedM44
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             TestInstancedM44.hs
  build-depends:       base
                     , gl-pal
                     , sdl-pal
                     , linear-extra
                     , halive
                     , mtl
                     , time
                     , random
                     , vector
  ghc-options:         -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite instancedM44Mapped
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             TestInstancedM44Mapped.hs
  build-depends:       base
                     , gl-pal
                     , sdl-pal
                     , linear-extra
                     , halive
                     , mtl
                     , time
                     , random
                     , vector
  ghc-options:         -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010


test-suite ubo
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             TestUniformBuffer.hs
  build-depends:       base
                     , gl-pal
                     , sdl-pal
                     , linear-extra
                     , halive
                     , mtl
                     , time
                     , random
  ghc-options:         -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite rayobb
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             TestRayOBB.hs
  build-depends:       base
                     , gl-pal
                     , sdl-pal
                     , linear-extra
                     , halive
                     , mtl
                     , time
                     , random
  ghc-options:         -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lukexi/gl-pal
