name:                gl-pal2
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/lukexi/gl-pal2
license:             BSD3
license-file:        LICENSE
author:              Luke Iannini
maintainer:          lukexi@me.com
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Graphics.GL.Pal2
    Graphics.GL.Pal2.ArrayBuffer
    Graphics.GL.Pal2.AssignAttribute
    Graphics.GL.Pal2.Entity
    Graphics.GL.Pal2.Geometries.Cube
    Graphics.GL.Pal2.Geometries.Plane
    Graphics.GL.Pal2.Geometry
    Graphics.GL.Pal2.Shader
    Graphics.GL.Pal2.Texture
    Graphics.GL.Pal2.Types
    Graphics.GL.Pal2.Uniforms
    Graphics.GL.Pal2.WithActions
    Linear.Extra
    Data.Colour.Extra
  build-depends:       
      base >= 4.7 && < 5
    , gl
    , JuicyPixels
    , vector
    , text
    , bytestring
    , mtl
    , lens
    , linear
    , colour
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , gl-pal2
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/name/project
